# ContactList

./: .gitignore  CMakeLists.txt  README.md  build.sh  envgen.sh
src/: app.cpp  app.hpp  contact.hpp  data.cpp  data.hpp  main.cpp  request_types.hpp  ui_console.cpp  ui_console.hpp  ui_interface.hpp
